--- a/html_basin.html
+++ b/html_basin.html
@@ -4,7 +4,7 @@
 <title>Html_basin</title>
 
 <h1>My First heading</h1>
-<p>My first paragraph.</p>p>
+<p>My first paragraph.</p>
 
 </body>
 </html>
