--- a/html_intro.html
+++ b/html_intro.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-<h1>My first Heading</h1>
-<p>My first paragraph.</p>
+<h1>This is Nick</h1>
+<p>Hi, I'm Nick.</p>
 
 </body>
 </html>
