Remove lots of file

--- a/html_basin.html
+++ b/html_basin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<title>Html_basin</title>
+<title>Html_basic</title>
 
 <h1>My First heading</h1>
 <p>My first paragraph.</p>
