--- a/html_CSS_exercise.html
+++ b/html_CSS_exercise.html
@@ -3,7 +3,7 @@
 <head>
 <title>Html style - CSS exercise</title>
 <style>
-body {background-color: yellow}
+body {background-color: yellow;}
 h1 {color: blue; font-family: courier;}
 p {color: green; font-family: courier; border:3px solid red}
 p#special{background-color: black;color: white}
