--- a/html_attributes.html
+++ b/html_attributes.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-	<body>
-		<a href="https://www.facebook.com/eason.lou.3" title="It's about Nick's facebook">This is Nick</a>
-	</body>
-	<body>
-		<img src="35.jpg" alt="sunset" width="600" height="500">
-	</body>
+<head>
+	<title>Html attributes exercise</title>
+</head>
+<body>
+	<a href="https://www.facebook.com/eason.lou.3" title="It's about Nick's facebook">This is Nick</a>
+</body>
+<body>
+	<img src="35.jpg" alt="sunset" width="600" height="500">
+</body>
 </html>
