--- a/html_basic.html
+++ b/html_basic.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<title>Html_basic</title>
+</head>
 <body>
-<title>Html_basic</title>
-
-<h1>My First heading</h1>
-<p>My first paragraph.</p>
-
+	<h1>My First heading</h1>
+	<p>My first paragraph.</p>
 </body>
 </html>
