--- a/html_paragraphs_exercise.html
+++ b/html_paragraphs_exercise.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Html paragraphs exercise</title>
+  <title>Html paragraphs exercise</title>
 </head>
 <body>
-<p>Hello World!</p>
-
-<h1>This is heading</h1>
-<p>This is paragraphs</p>
-<p>This is paragraphs</p>
-<p>This is paragraphs</p>
-
-<p>My Bonnie lies over the ocean. <br>My Bonnie lies over the sea.<br>My Bonnie lies over the ocean.<br>Oh, bring back my Bonnie to me.</p>
-
-<pre>
+  <p>Hello World!</p>
+  <h1>This is heading</h1>
+  <p>This is paragraphs</p>
+  <p>This is paragraphs</p>
+  <p>This is paragraphs</p>
+  <p>My Bonnie lies over the ocean.
+    <br>My Bonnie lies over the sea.
+    <br>My Bonnie lies over the ocean.
+    <br>Oh, bring back my Bonnie to me.</p>
+  <pre>
    My Bonnie lies over the ocean.
 
    My Bonnie lies over the sea.
@@ -23,4 +23,5 @@
    Oh, bring back my Bonnie to me.
 </pre>
 </body>
+
 </html>
