--- a/html_image_The picture Element.html
+++ b/html_image_The picture Element.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>The picture Element</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>The picture Element</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-<picture>
-<source media="(min-width:650px)" srcset="https://i.imgur.com/j3GOQL2.jpg">
-<source media="(min-width:465px)" srcset="https://i.imgur.com/Dfg9ZaN.jpg">
-<img src="https://i.imgur.com/Bu118xy.jpg" alt="Green cakes" style="width: auto;">
-</picture>
+	<picture>
+		<source media="(min-width:650px)" srcset="https://i.imgur.com/j3GOQL2.jpg">
+		<source media="(min-width:465px)" srcset="https://i.imgur.com/Dfg9ZaN.jpg">
+		<img src="https://i.imgur.com/Bu118xy.jpg" alt="Green cakes">
+	</picture>
 </body>
 </html>
