--- a/html_link_exercise.html
+++ b/html_link_exercise.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Html link exercise</title>
-<style>
-a:link {text-decoration: none;}
-</style>
+	<title>Html link exercise</title>
+	<style>
+		a:link {
+				text-decoration: none;
+		}
+	</style>
 </head>
 <body>
-<a href="https://www.w3schools.com" title="to HTML tutorial">Visit our HTML tutorial.</a>
-<a href="html_images.asp" target="_blank">HTML Images</a>
-<a href="https://www.w3schools.com" title="to HTML tutorial"><img src="smiley.gif" alt="HTML tutorial" style="width: 42px; height: 42px; border: 0;"></a>
+	<a href="https://www.w3schools.com" title="to HTML tutorial">Visit our HTML tutorial.</a>
+	<a href="html_images.asp" target="_blank">HTML Images</a>
+	<a href="https://www.w3schools.com" title="to HTML tutorial"><img src="smiley.gif" alt="HTML tutorial" style="width: 42px; height: 42px; border: 0;"></a>
 </body>
 </html>
