--- a/html_quotation_exercise.html
+++ b/html_quotation_exercise.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Html quotation exercise</title>
+  <title>Html quotation exercise</title>
 </head>
 <body>
-<p>I am so <q>fat</q>.</p>
-<blockquote cite="http://www.worldwildlife.org/who/index.html">For 50 years, WWF has been protecting the future of nature.
-The world's leading conservation organization,
-WWF works in 100 countries and is supported by
-1.2 million members in the United States and
-close to 5 million globally.</blockquote>
-<bdo dir="rtl">What a beautiful day!</bdo>
-<p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
+  <p>I am so <q>fat</q>.</p>
+  <blockquote cite="http://www.worldwildlife.org/who/index.html">For 50 years, WWF has been protecting the future of nature. The world's leading conservation organizatio>n, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.</blockquote>
+  <bdo dir="rtl">What a beautiful day!</bdo>
+  <p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
 </body>
-</html>
+</html
