--- a/html_table_exercise.html
+++ b/html_table_exercise.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Html table exercise</title>
-<style>
-table, th, td,tr {border: 5px solid red; border-collapse: collapse; text-align: left; background-color: black; color: white;}
-th, td {padding: 5px; text-align: left;}
-</style>
+		<title>Html table exercise</title>
+		<style>
+				table,
+				th,
+				td,
+				tr {
+						border: 5px solid red;
+						border-collapse: collapse;
+						text-align: left;
+						background-color: black;
+						color: white;
+				}
+				
+				th,
+				td {
+						padding: 5px;
+						text-align: left;
+				}
+		</style>
 </head>
 <body>
-<table style="width: 300px;">
-<caption>Names</caption>
-<tr>
-<th>First name</th>
-<th>Last name</th>
-<th>Point</th>
-</tr>
-<tr>
-<td>Jill</td>
-<td>Smith</td>
-<td>50</td>
-</tr>
-<tr>
-<td>Eve</td>
-<td>Jackson</td>
-<td>94</td>
-</tr>
-</table>
+		<table style="width: 300px;">
+				<caption>Names</caption>
+				<tr>
+						<th>First name</th>
+						<th>Last name</th>
+						<th>Point</th>
+				</tr>
+				<tr>
+						<td>Jill</td>
+						<td>Smith</td>
+						<td>50</td>
+				</tr>
+				<tr>
+						<td>Eve</td>
+						<td>Jackson</td>
+						<td>94</td>
+				</tr>
+		</table>
 </body>
 </html>
