--- a/html_image_The picture Element.html
+++ b/html_image_The picture Element.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>The picture Element</title>
+	<title>The picture Elements</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
