--- a/html_element.html
+++ b/html_element.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Html_element</title>
-</head>
-<body>
-	<h1>My First Heading</h1>
-	<p>My first paragraph.</p>
-</body>
+  <head>
+    <title>Html colors exercise</title>
+  </head>
+  <body style="background-color: pink;">
+    <h1 style="background-color: blue;">I am Nick.</h1>
+    <h1 style="color: orange;">I am Nick.</h1>
+    <h1 style="border: 3px solid yellow;">I am Nick.</h1>
+    <h1 style="background-color: rgb(255, 99, 71);">I am Nick.</h1>
+    <h1 style="background-color: #ff3047; color: rgb(255, 255, 255);">I am Nick.</h1>
+  </body>
 </html>
