--- a/html_list_example.html
+++ b/html_list_example.html
@@ -1,82 +1,83 @@
 <!DOCTYPE html>
 <html>
-<head>
-	 <title>Html list example</title>
-</head>
-<body>
-	 <h2>An Unordered HTML List</h2>
-	 <ul>
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-	 </ul>
-	 <ul style="list-style-type: disc;">
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-	 </ul>
-	 <ul style="list-style-type: circle;">
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-	 </ul>
-	 <ul style="list-style-type: square;">
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-	 </ul>
-	 <ul style="list-style-type: none;">
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-	 </ul>
-	 <h2>An Ordered HTML List</h2>
-	 <ol>
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-	 </ol>
-	 <ol type="1">
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-	 </ol>
-	 <ol type="A">
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-	 </ol>
-	 <ol type="a">
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-	 </ol>
-	 <ol type="I">
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-		  <li>Water</li>
-	 </ol>
-	 <ol type="i">
-		  <li>Coffee</li>
-		  <li>Tea</li>
-		  <li>Milk</li>
-	 </ol>
-	 <dl>
-	 	<dt>Coffee</dt>
-	 	<dd>- black hot drink</dd>
-	 	<dt>Milk</dt>
-	 	<dd>- white cold drink</dd>
-	 </dl>
-	 <ul>
-	 	<li>Coffee</li>
-	 	<li>Tea
-	 		<ul>
-	 			<li>Black tea</li>
-	 			<li>Green tea</li>
-	 		</ul>
-	 	</li>
-	 	<li>Milk</li>
-	 </ul>
-</body>
+  <head>
+    <title>Html list example</title>
+  </head>
+  <body>
+    <h2>An Unordered HTML List</h2>
+    <ul>
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ul>
+    <ul style="list-style-type: disc;">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ul>
+    <ul style="list-style-type: circle;">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ul>
+    <ul style="list-style-type: square;">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ul>
+    <ul style="list-style-type: none;">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ul>
+    <h2>An Ordered HTML List</h2>
+    <ol>
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ol>
+    <ol type="1">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ol>
+    <ol type="A">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ol>
+    <ol type="a">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ol>
+    <ol type="I">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+      <li>Water</li>
+    </ol>
+    <ol type="i">
+      <li>Coffee</li>
+      <li>Tea</li>
+      <li>Milk</li>
+    </ol>
+    <dl>
+      <dt>Coffee</dt>
+      <dd>- black hot drink</dd>
+      <dt>Milk</dt>
+      <dd>- white cold drink</dd>
+    </dl>
+    <ul>
+      <li>Coffee</li>
+      <li>
+        Tea
+        <ul>
+          <li>Black tea</li>
+          <li>Green tea</li>
+        </ul>
+      </li>
+      <li>Milk</li>
+    </ul>
+  </body>
 </html>
