--- a/CSS/CSS_in_first_letter.html
+++ b/CSS/CSS_in_first_letter.html
@@ -10,9 +10,9 @@
           float: left;
           font-weight: bold;
           color: #ff6600;
-          background-color: #ffffff
+          background-color: #fff
         } 
-        -->
+      -->
     </style>
   </head>
   <body>
