--- a/CSS/CSS_in_first_line.html
+++ b/CSS/CSS_in_first_line.html
@@ -9,10 +9,10 @@
           line-height: 1.6;
         } 
         p:first-line {
-          color: #ffffff;
+          color: #fff;
           background-color: #ff6600
         }
-        -->
+      -->
     </style>
   </head>
   <body>
