--- a/CSS/CSS_in_specific_element.html
+++ b/CSS/CSS_in_specific_element.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-tw">
-  <meta http-equiv="Content-Type" content="text/html"; charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html"; charset="Big5">
   <head>
     <title>適用於特定元素</title>
     <style type="text/css">
@@ -9,9 +9,9 @@
           margin: 3em
         }
         h1 {
-          font-size: medium;  /*將文字大小標準化*/
+          font-size: medium; /*將文字大小標準化*/
           padding: 0.3em;
-          color: #ffffff; /*將文字設定為白色*/
+          color: #fff; /*將文字設定為白色*/
           background: #FF6600;  /*背景設定為橘色*/
         }
         p {
