--- a/CSS/CSS_in_specific_element2.html
+++ b/CSS/CSS_in_specific_element2.html
@@ -6,10 +6,10 @@
     <style type="text/css">
       <!--
         p em {
-          color: #ffffff;
+          color: #fff;
           background-color: #ff6600;
         }
-        -->
+      -->
     </style>
   </head>
   <body>
