--- a/CSS/CSS_in_style_of_link.html
+++ b/CSS/CSS_in_style_of_link.html
@@ -8,19 +8,19 @@
         /*普通連結色的設定*/
         a:link {
           color: #0000ff;
-          background-color: #ffffff;
+          background-color: #fff;
         } 
         a:visited {
           color: #000080;
-          background-color: #ffffff;
+          background-color: #fff;
         }
         a:hover {
           color: #ff3300;
-          background-color: #ffffff;
+          background-color: #fff;
         }
         a:active {
           color: #ff0000;
-          background-color: #ffffff;
+          background-color: #fff;
         }
         /*特定類別中含有的連結部分改變顏色*/
         a.special {
@@ -28,17 +28,17 @@
         }
         a.special:link {
           color: #00cc00;
-          background-color: #ffffff;
+          background-color: #fff;
         }
         a.special:visited {
           color: #009900;
-          background-color: #ffffff;
+          background-color: #fff;
         }
         a.special:active {
           color: #00ff00;
-          background-color: #ffffff
+          background-color: #fff;
         }
-        -->
+      -->
       .navbar {
       text-align: center;
       border-top: solid 1px #999999;
