[mod] rename JavaScript_introduction.html to javascript_introduction.html

--- a/JavaScript/JavaScript_introduction.html
+++ b/JavaScript/JavaScript_introduction.html
@@ -16,6 +16,6 @@
       <button type="button" onclick="document.getElementById('demo2').style.fontSize='35px'">Turn letters bigger!</button>
       <p id="demo3">JavaScript can hide and show HTML elements.</p>
       <button type="button" onclick="document.getElementById('demo3').style.display='none'">Hide the sentence!</button>
-      <button type="button" onclick="document.getElementById('demo3').style.display='block'">Show the sentence!</button>
+      <button type="button" onclick="document.getElementById('demo3').style.display='block'">Show the sentence!!</button>
     </body>
   </html>
