[add] Exercise about JavaScript

--- a/javascript/javascript_where_to.html
+++ b/javascript/javascript_where_to.html
@@ -17,7 +17,7 @@
       <h2>JavaScript in head</h2>
       <p id="demo2">A paragraph</p>
       <button type="button" onclick="myFunction()">Try it</button>
-      <h2>JavaScript in body</h2>
+      <h2>JavaScript in body!</h2>
       <p id="demo3">A paragraph.</p>
       <button type="button" onclick="myFunction1()">Try it</button>
       <script>
