--- a/JavaScript/data_types/javascript_null.html
+++ b/JavaScript/data_types/javascript_null.html
@@ -9,5 +9,6 @@
     <p id="demo"></p>
     <p>Objects can be emptied by setting the value to <b>undefined</b>.</p>
     <p id="demo1"></p>
+    <p id="demo2"></p>
   </body>
 </html>
